--- a/css/iniciarSesion.css
+++ b/css/iniciarSesion.css
@@ -9,7 +9,7 @@ body {
   background-color: #f5f5f5;
 }
 
-.login-container {
+.login-container { 
   max-width: 400px;
   width: 100%;
   padding: 20px;
@@ -19,7 +19,10 @@ body {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
+p {
+  color: #545151;
+  font-size: 15px;
+}
 /* Header with back button */
 .header {
   display: flex;
